package task3;
import task3.Matrix.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int rank(int random);

    public int getValue();

}
